# eog-sd-prompts-plugin

./: .gitignore  README.md  pyproject.toml
eog_sd_prompts_plugin/: __main__.py  constants.py  gschemas.compiled  parsers.py  sd_prompts.glade  sd_prompts.plugin  sd_prompts.py
resources/: Makefile  sd-prompts.gschema.xml
