[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eog-sd-prompts-plugin"
description = "eog stable diffusion prompt display"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
   'sd-parsers >= 0.2.3, < 3'
]
dynamic = ["version"]
license = {file = "LICENSE.txt"}

[tool.setuptools_scm]

[project.urls]
repository = "https://github.com/d3x-at/eog-sd-prompts-plugin"
